@@ -156,6 +156,7 @@ since 1999.  If I missed your name, let me know.
 * Jacob Lundqvist
 * James Maddison
 * Joseph Maiorana
+* Ricardo Maraschini
 * Michael Marineau
 * Roberto Marrodan
 * Ernst-Deiter Martin
